# feather

./: .gitignore  Cargo.toml  README.md
.github/: CODEOWNERS
.github/workflows/: build-artifacts.yml  create-release.yml
crates/feather/: Cargo.toml
crates/feather-fabric/: Cargo.toml
crates/feather-fabric/src/: lib.rs  structs.rs
crates/feather/src/: cache.rs  config.rs  installer.rs  java.rs  logging.rs  main.rs  minecraft.rs  plan.rs
crates/feather/src/action/: lib.rs  mod.rs  stateful.rs
crates/feather/src/action/base/: configure_systemd.rs  create_directory.rs  create_feather_env.rs  create_file.rs  create_group.rs  create_user.rs  install_fabric_loader.rs  install_java.rs  install_minecraft.rs  mod.rs  start_systemd.rs
crates/feather/src/action/base/templates/: feather.service
crates/feather/src/cli/: mod.rs  printer.rs
crates/feather/src/modpack/: java.rs  mod.rs  modrinth.rs
crates/feather/src/network/: mod.rs
crates/feather/src/templates/: feather.service
