[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
name = "feather"
description = "CLI tool for managing Minecraft servers"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"

[workspace.dependencies]
feather-fabric = { path = "crates/feather-fabric" }

anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive", "env"] }
indicatif = "0.17.11"
inquire = "0.7.5"
log = "0.4.27"
reqwest = { version = "0.12.15", default-features = false, features = [
    "blocking",
    "json",
    "gzip",
    "zstd",
    "stream",
    "rustls-tls",
    "rustls-tls-native-roots",
    "http2",
] }
rustc-hash = "2.1.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tempfile = "3.19.1"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["process"] }
toml = "0.8.22"
versions = { version = "7.0.0", features = ["serde"] }
zip = "3.0.0"
futures-core = "0.3.31"
bytes = "1.10.1"
fern = "0.7.1"
colored = "3.0.0"
jiff = "0.2.12"
flate2 = { version = "1.1.1", default-features = false, features = ["zlib-rs"] }
tar = "0.4.44"
sudo = "0.6.0"
dyn-clone = "1.0.19"
nix = { version = "0.30.1", default-features = false, features = ["user"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", default-features = false, features = [
    "env-filter",
    "fmt",
    "ansi",
    "smallvec",
    "chrono",
] }
typetag = "0.2.20"
async-trait = { version = "0.1.88", default-features = false }
which = "7.0.3"
strum = { version = "0.27.1", features = ["derive"] }
compact_str = { version = "0.9.0", features = ["serde"] }
tikv-jemallocator = "0.6.0"
smallvec = { version = "1.15.0", features = [
    "serde",
    "union",
    "const_generics",
] }

[profile.release]
lto = true
strip = true
opt-level = 3
