[package]
name = "feather"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
indicatif = { workspace = true }
inquire = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
versions = { workspace = true }
zip = { workspace = true }
fern = { workspace = true }
colored = { workspace = true }
jiff = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
sudo = { workspace = true }
dyn-clone = { workspace = true }
nix = { workspace = true }
tracing = { workspace = true }
typetag = { workspace = true }

feather-fabric = { workspace = true }
