[package]
name = "feather"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
indicatif = { workspace = true }
inquire = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
versions = { workspace = true }
zip = { workspace = true }
fern = { workspace = true }
colored = { workspace = true }
jiff = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
sudo = { workspace = true }
dyn-clone = { workspace = true }
nix = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-log = { workspace = true }
typetag = { workspace = true }
async-trait = { workspace = true }
which = { workspace = true }
strum = { workspace = true }
compact_str = { workspace = true }
smallvec = { workspace = true }

feather-fabric = { workspace = true }

[target.'cfg(all(not(target_os = "windows"), not(target_os = "openbsd"), not(target_os = "aix"), not(target_os = "android"), any(target_arch = "x86_64", target_arch = "aarch64", target_arch = "powerpc64")))'.dependencies]
tikv-jemallocator = { workspace = true }
