[package]
name = "feather"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
versions = { workspace = true }
colored = { workspace = true }
jiff = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-log = { workspace = true }
tempfile = { workspace = true }
zip = { workspace = true }
log = { workspace = true }

feather-fabric = { workspace = true }
